--- a/conversion.html
+++ b/conversion.html
@@ -10,7 +10,7 @@
     <input type ="number" id="base" name="base" min=10 max=50 step=2 value=50> <br>
 
     <label for="conv">Enter the conversion rate</label>
-    <input type ="number" id="con" name="con" value=35> <br>
+    <input type ="number" id="conv" name="conv" value=35> <br>
 
     <input type="button" onclick="convert()" value="Show conversions">
 </form>
@@ -24,14 +24,15 @@
     <label for="max">max</label>
     <br>
     <input type="radio" id="min" name="calculations" onclick="chooseOp()" value="minimum">
-    <label for="min">min</label>
+    <label for="min">min</label> <br>
+    <input type="button"class="btn btn-primary" onclick="chooseOp()" value="Get min/max/average">
 </form>
 <p id="result1">This text will be replaced </p>
 
 <script> 
 function convert(){
     base = document.getElementById("base").value
-    ele = document.getElementById("con").value
+    ele = document.getElementById("conv").value
     toShow=''    
     out = document.getElementById("result")
     for(let i=0;i<5;i++){     
@@ -40,14 +41,10 @@ function convert(){
         base=base*2
     }
     document.getElementById("result").innerHTML = "Conversions are:" + toShow;}
-</script>
-
-<script>
-    
 function chooseOp(){
    let ans=0;
     let base = document.getElementById("base").value;
-    let ele = document.getElementById("con").value;
+    let ele = document.getElementById("conv").value;
     let average = document.getElementById("average").checked;
     let max = document.getElementById("max").checked;
     let min = document.getElementById("min").checked;
@@ -62,6 +59,5 @@ function chooseOp(){
     }
     document.getElementById("result1").innerHTML = ans}
 </script>
-
 </body>
 </html> 
