--- a/conversion.html
+++ b/conversion.html
@@ -37,7 +37,7 @@ function convert(){
     out = document.getElementById("result")
     for(let i=0;i<5;i++){     
         let conversion=base*ele;
-        toShow=toShow+" "+ base +" is "+ conversion.toFixed(1)+";";
+        toShow=toShow+" "+ base +" is "+  (conversion.toFixed(1))+";";
         base=base*2
     }
     document.getElementById("result").innerHTML = "Conversions are:" + toShow;}
