--- a/candy.html
+++ b/candy.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        
+        <title>
+            The candy page
+        </title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" 
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" 
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+    </head>
  
 <body>
 
-<h2>chooses candy by Lalith Vuppala</h2>
+<h2> Lalith Vuppala chooses candy</h2>
 <div class="container">
 <form>
     <input type ="checkbox" id="dark_chocolate" name="candy" value="true"> 
@@ -15,7 +27,7 @@
     <input type="checkbox" id="chewy" name="candy" value="false">
     <label for="chewy">Chewy </label><br>
 
-    <input type="button" value="Select a Box" onclick="selectBox()">
+    <input type="button"  class = "btn btn-success"value="Select a Box" onclick="selectBox()">
 </form>
 </div>
 
@@ -59,7 +71,7 @@ function selectBox (){
     <label for="Price">Enter Price </label>
     <input type ="text" id="price" name="price"><br>
 
-    <input type="button" value="Update the box" onclick="updateBox()">
+    <input type="button"  class = "btn btn-success"value="Update the box" onclick="updateBox()">
 </form>
 
 
